mistake ID changed to class

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         <input type="tel" class="form-control border-info border-bottom rounded-0" name="mobilePhone" placeholder="Tlf" data-validation="number" data-validation-error-msg-container="#error-dialog3">
                         <div id="error-dialog3" class="mt-3"></div>
                         
-                        <div id="form-group form-check">
+                        <div class="form-group form-check">
                             <input type="checkbox" name="permission" value="permission" class="form-check-input" id="form-check"> <label class="form-check-label" for="form-check">
                                 Jeg giver hermed tilladelse til, at Nordlid må gemme og bruge min data til interne projekter. Jeg kan til hver en tid tilbagekalde min accept.</label><br>
                         </div>
